purchase, store, user쪽 html 일부분 수정

--- a/templates/purchasing/base.html
+++ b/templates/purchasing/base.html
@@ -214,7 +214,7 @@
                 <i class="fas fa-user"></i>
                 <span class='yellow-text'>{{ request.session.memid }}</span>님이 로그인하였습니다.
                 &nbsp;
-                <a href="#" class="logout-button btn btn-primary">로그아웃</a>
+                <a href="#" class="logout-button btn">로그아웃</a>
                 <a href="#">
                 	<img src="{% static 'images/logout.png' %}" alt="logout" class="logout-image">
                 </a>
@@ -228,13 +228,13 @@
 	      
         <div class="center-container">
             <div class="d-flex">
-                <a href="/search/main" class="btn btn-primary">MAIN</a>
-                <a href="/search/searchbycategory" class="btn btn-primary">Category.</a>
-                <a href="/search/searchbyuser" class="btn btn-primary">Recommend.</a>
-                <a href="/search/searchbyrank" class="btn btn-primary">MostPop.</a>
+                <a href="/search/main" class="btn">MAIN</a>
+                <a href="/search/searchbycategory" class="btn">Category.</a>
+                <a href="/search/searchbyuser" class="btn">Recommend.</a>
+                <a href="/search/searchbyrank" class="btn">MostPop.</a>
                 <div class="ml-auto">
-                    <a href="/board/list" class="btn btn-primary">Board</a>
-                    <a href="/user/myPage" class="btn btn-primary">MyPage</a>
+                    <a href="/board/list" class="btn">Board</a>
+                    <a href="/user/myPage" class="btn">MyPage</a>
                 </div>
             </div>
         </div>
