--- a/templates/store/productList.html
+++ b/templates/store/productList.html
@@ -30,7 +30,9 @@
     </div>
     {% for dto in product_list %}
     <div class="row">
-      <div class="col">{{dto.storeSell__wine__wine_name}}</div>
+      <div class="col">
+      	<a href="/detail/winedetail?wine_id={{dto.storeSell__wine__wine_id}}">{{dto.storeSell__wine__wine_name}}</a>
+      </div>
       <div class="col-1">{{dto.storeSell__sell_price}}원</div>
       <div class="col-1">{{dto.storeSell__wine__wine_alc}}%</div>
       <div class="col-1">{{dto.storeSell__wine__wine_capacity}}ml</div>
